# generate-clips

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMO_EXECUTAR.txt  README.md  main.py  pyproject.toml  requirements.txt  run_pycharm.py
.github/workflows/: automerge.yml  lint.yml
app/api/: events.py  jobs.py  main.py  schemas.py
app/db/: __init__.py  models.py  session.py
app/llm/: __init__.py  auto.py  base.py  claude.py  factory.py  gemini.py  gpt.py  ollama.py  rate_limit.py
app/llm/gemini/: __init__.py  gemini.py  models.py  rate_limit.py
app/pipeline/: analyzer.py  cut_worker.py  cutter.py  downloader.py  face_tracker.py  hls.py  metadata.py  runner.py  subtitler.py  transcriber.py  validator.py
app/pipeline/workflows/: __init__.py  video.py
app/storage/: __init__.py  base.py  minio.py
app/support/: config.py  cuda_bootstrap.py  ffmpeg.py  logger.py  types.py
