[project]
name = "auto-post"
version = "0.2.0"
description = "Transforma vídeos longos do YouTube em cortes curtos legendados para redes sociais"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.1.15",
    "faster-whisper>=1.1.0",
    "ffmpeg-python>=0.2.0",
    "typer>=0.15.1",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "mediapipe>=0.10.18",
    "opencv-python>=4.10.0",
    "scipy>=1.14.0",
    "librosa>=0.10.2",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
gpt = ["openai>=1.59.0"]
all = ["anthropic>=0.40.0", "openai>=1.59.0"]

[project.scripts]
auto-post = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
