[project]
name = "auto-post"
version = "0.2.0"
description = "Transforma vídeos longos do YouTube em cortes curtos legendados para redes sociais"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.1.15",
    "faster-whisper>=1.1.0",
    "ffmpeg-python>=0.2.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "minio>=7.2.0",
    "mediapipe>=0.10.18",
    "opencv-python>=4.10.0",
    "scipy>=1.14.0",
    "librosa>=0.10.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    # Transcrição na GPU (Metal) — só macOS Apple Silicon; pip ignora no resto.
    "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
gpt = ["openai>=1.59.0"]
all = ["anthropic>=0.40.0", "openai>=1.59.0"]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
auto-post = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults (common in FastAPI)
    "W191", # indentation contains tabs
]

[tool.mypy]
python_version = "3.11"
# Namespace packages (PEP 420 — sem __init__.py). explicit_package_bases evita
# que app/support/types.py seja interpretado como o stdlib `types`.
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "mlx_whisper.*",
    "mediapipe.*",
    "cv2.*",
    "scipy.*",
    "minio.*",
    "yt_dlp.*",
]
ignore_missing_imports = true
